Kubernetes/Database/CloudBeaver/yamls/cloudbeaver.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    name: cloudbeaver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
  labels:
    app: cloudbeaver
    app.kubernetes.io/name: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
        app.kubernetes.io/name: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
              name: http
          volumeMounts:
          - mountPath: /opt/cloudbeaver/workspace
            name: cloudbeaver-data
      volumes:
      - name: cloudbeaver-data
        persistentVolumeClaim:
          claimName: cloudbeaver-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudbeaver
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  ports:
  - name: http
    port: 8978
    protocol: TCP
    targetPort: http
  selector:
    app: cloudbeaver
  type: ClusterIP 
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-cloudbeaver-https-redirect
  namespace: cloudbeaver
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-cloudbeaver-security
  namespace: cloudbeaver
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-cloudbeaver-websecure
  namespace: cloudbeaver 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloudbeaver.domain.com`)
      services:
        - name: cloudbeaver
          port: 8978
          serversTransport: traefik-cloudbeaver-transport
      middlewares:
        - name: traefik-cloudbeaver-security
  tls:
    secretName: cloudbeaver-domain
    options:
      name: traefik-cloudbeaver-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-cloudbeaver-web
  namespace: cloudbeaver
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cloudbeaver.domain.com`)
      services:
        - name: cloudbeaver
          port: 8978
      middlewares:
        - name: traefik-cloudbeaver-https-redirect
